[package]
name = "discord-singleshot"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
clap = { version = "4.5.4", features = ["derive"] }
toml = "0.8.12"
serde = { version = "1.0.197", features = ["derive"] }
serenity = "0.12.1"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "discss"
path = "src/bin/discss.rs"

